[package]
name = "fix-rs"
version = "0.2.1"
authors = ["James Bendig <jbendig@starbytesoftware.com>"]
description = "FIX (Financial Information Exchange) engine written in Rust."
homepage = "https://github.com/jbendig/fix-rs"
repository = "https://github.com/jbendig/fix-rs"
documentation = "https://docs.rs/fix-rs/"
readme = "README.md"
keywords = ["fix", "protocol", "finance", "trading", "library"]
categories = ["network-programming", ]
license = "MIT/Apache-2.0"

[features]
default = []
load-testing = ["clap"]

[dependencies]
"fix-rs-macros" = { path = "fix-rs-macros", version = "0.2.1" }
"mio" = "0.6.6"
"chrono" = "0.3.1"
"time" = "0.1"
"phf" = "0.7.21"
"phf_macros" = "0.7.21"
"clap" = { version = "~2.23.3", optional = true }

[[bin]]
name="fix-rs-lt"
path="src/bin/fix-rs-lt.rs"
required-features = ["load-testing"]
