[package]
name = "fix-rs-macros"
version = "0.2.1"
authors = ["James Bendig <jbendig@starbytesoftware.com>"]
description = "Derive macros used by fix-rs."
homepage = "https://github.com/jbendig/fix-rs"
repository = "https://github.com/jbendig/fix-rs"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.4"
quote = "0.3.12"
